[package]
name = "shm-ipband"
version = "0.1.0"
authors = ["Shish <shish@shishnet.org>"]
edition = "2018"
build = "build.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
pretty_env_logger = "0.4"
structopt = "0.3"
log = "0.4"
gethostname = "0.2"
futures = "0.3"

[build-dependencies]
vergen = "3"