[package]
name = "shm-ipband"
version = "0.2.0"
authors = ["Shish <shish@shishnet.org>"]
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
postgres = "0.19"
pretty_env_logger = "0.5"
log = "0.4"
anyhow = "1"
shadow-rs = "1.4"

[build-dependencies]
shadow-rs = "1.4"
